--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -16,8 +16,20 @@
         <h2>Featured Categories</h2>
         <section class="info">
             <div class="card">
-                <img src="https://i0.wp.com/siritoycollections.com/wp-content/uploads/2024/02/DALL%C2%B7E-2024-02-15-11.03.54-A-colorful-and-engaging-toy-set-for-3-year-olds.-The-image-includes-a-variety-of-toys-designed-to-stimulate-learning-and-creativity-in-young-children.webp?fit=1024%2C1024&ssl=1" alt="All Toys">
-                <h3>ALL Toys</h3>
+                <img src="https://m.media-amazon.com/images/I/51hE2I7YvJL._AC_.jpg" alt="All Toys">
+                <h3>Girls Toys</h3>
+                <p>Find exciting toys for Girls.</p>
+                <a href="/girltoys" class="btn">Shop Now</a>
+            </div>
+            <div class="card">
+                <img src="https://i5.walmartimages.com/seo/JitteryGit-Robot-STEM-Building-Toys-for-Boys-Christmas-Gifts-for-Kids-Ages-7-8-9-10-11-12-13-14_b316052f-7201-4704-a937-d6f454079c17.0f2d530c5f9214019ee309988ee3dba0.jpeg?odnHeight=768&odnWidth=768&odnBg=FFFFFF" alt="All Toys">
+                <h3>Boys Toys</h3>
+                <p>Find exciting toys for Boys.</p>
+                <a href="/boytoys" class="btn">Shop Now</a>
+            </div>
+            <div class="card">
+                <img src="https://m.media-amazon.com/images/I/81O-OtqDxEL.jpg" alt="All Toys">
+                <h3>For ALL</h3>
                 <p>Find exciting toys for all Kids.</p>
                 <a href="/alltoys" class="btn">Shop Now</a>
             </div>
@@ -26,6 +38,12 @@
                 <h3>ALL Categories</h3>
                 <p>Find all Toy Categories.</p>
                 <a href="/allcategories" class="btn">Shop Now</a>
+            </div>
+            <div class="card">
+                <img src="https://cdn.thememylogin.com/uploads/edd/2019/03/favorites.png" alt="Favorites">
+                <h3>Favorites</h3>
+                <p>Find all Favorites.</p>
+                <a href="/allfavorites" class="btn">Shop Now</a>
             </div>
         </section>
     </main>
