--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
         <ul>
             <li><a href="/alltoys-json">ALL Toys(JSON)</a></li>
             <li><a href="/allcategories-json">ALL Categories(JSON)</a></li>
+            <li><a href="/favorites-json">Favorites(JSON)</a></li>
             <li><a href="/add-toy">Add Toy</a></li>
             <li><a href="/categoryForm">Add Category</a></li>
         </ul>
